# openbook

./: .bumpversion.toml  Cargo.toml  README.md
.circleci/: config.yml
.github/: rustfmt.yml
examples/v1/: Cargo.toml
examples/v1/src/: main.rs
examples/v2/: Cargo.toml
examples/v2/src/: main.rs
src/: cli.rs  fees.rs  lib.rs  main.rs  market.rs  ob_client.rs  orders.rs  rpc.rs  tokens_and_markets.rs  traits.rs  tui.rs  utils.rs  v1.rs  v2.rs
src/v1/: fees.rs  market.rs  ob_client.rs  orders.rs  traits.rs
src/v2/: account_fetcher.rs  book.rs  chain_data.rs  chain_data_fetcher.rs  context.rs  market.rs  ob_client.rs
tests/: fees.rs  market.rs  rpc.rs  tokens_and_markets.rs
tests/v1/: market.rs
