[package]
name = "openbook"
version = "0.0.12"
edition = "2021"
description = "📖 A CLI, TUI and SDK to interact with the OpenBook market on the Solana blockchain (WIP)."
license = "MIT"
keywords = ["blockchain", "cli", "solana", "dex"]
categories = ["command-line-utilities", "web-programming", "science"]
repository = "https://github.com/gigadao/openbook"
documentation = "https://docs.rs/openbook"
authors = [
	"GigaDAO Core Maintainers",
	"Mahmoud Harmouch <oss@wiseai.dev>",
]
exclude = ["tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openbook_dex = { version = "0.5.6" , features = ["test", "client"]}
anyhow = "1.0.80"
solana-sdk = "=1.18.6"
rand = "0.8.5"
solana-client = "=1.18.6"
serum_dex = "0.5.4"
borsh = "1.3.1"
serde_json = "1.0.114"
tokio = "1.36.0"
spl-associated-token-account = "=2.3.0"
clap = { version = "4.5.1", features = ["derive"] , optional = true  }
solana-cli-output = { version = "1.18.6" , optional = true  }
solana-transaction-status = "1.18.6"
backon = "0.4.3"
ratatui = { version = "0.26.2", features = ["crossterm"], optional = true }
tui-input = { version = "0.8.0", optional = true }
serde = { version = "1.0.200", features = ["derive"], optional = true }
crossterm = { version = "0.27.0", optional = true }
unicode-width = { version = "0.1.12", optional = true }
strum = { version = "0.26.2", optional = true }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["std"], optional = true }

[features]
cli = ["clap", "solana-cli-output", "ratatui", "tui-input", "serde", "crossterm", "unicode-width", "strum", "tracing-subscriber"]

[dev-dependencies]
bump2version = "0.1.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"

[badges]
maintenance = { status = "actively-developed" }
