[package]
name = "openbook"
version = "0.0.12"
edition = "2021"
description = "📖 A CLI, TUI and SDK to interact with the OpenBook market on the Solana blockchain (WIP)."
license = "MIT"
keywords = ["blockchain", "cli", "solana", "dex"]
categories = ["command-line-utilities", "web-programming", "science"]
repository = "https://github.com/gigadao/openbook"
documentation = "https://docs.rs/openbook"
authors = [
	"GigaDAO Core Maintainers",
	"Mahmoud Harmouch <oss@wiseai.dev>",
]
exclude = ["tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# v1 deps
openbook_dex = { version = "0.5.6" , features = ["test", "client"], optional = true } 

# common
anyhow = "1.0.80"
solana-sdk = "=1.17.34"
rand = "0.8.5"
solana-client = "=1.17.34"
borsh = { version = "1.5.1", features = ["derive"] }
serde_json = "1.0.114"
tokio = "1.36.0"
spl-associated-token-account = "=2.3.0"
clap = { version = "4.5.1", features = ["derive"], optional = true }
solana-cli-output = { version = "=1.17.34" , optional = true  }
solana-transaction-status = "=1.17.34"
backon = "0.4.3"
ratatui = { version = "0.26.2", features = ["crossterm"], optional = true }
tui-input = { version = "0.8.0", optional = true }
serde = { version = "1.0.200", features = ["derive"], optional = true }
crossterm = { version = "0.27.0", optional = true }
unicode-width = { version = "0.1.12", optional = true }
strum = { version = "0.26.2", optional = true }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["std"], optional = true }
thiserror = "1.0.61"

# v2 deps
openbook-v2 = {git = "https://github.com/openbook-dex/openbook-v2.git", features = ["client"], optional = true }
itertools = { version = "0.13.0", optional = true }
reqwest = { version = "0.12.4", optional = true }
anchor-client = { version = "0.29.0", optional = true }
anchor-lang = { version = "0.29.0", optional = true }
anchor-spl = { version = "0.29.0", optional = true }
fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango", optional = true }
pyth-sdk-solana = { version = "0.10.1", optional = true }
solana-account-decoder = { version = "=1.17.34", optional = true }
async-once-cell = {version = "0.4.2", features = ["unpin"], optional = true}

[features]
default = ["v1"]
v1 = ["openbook_dex", ]
v2 = ["openbook-v2", "itertools", "reqwest", "anchor-client", "anchor-lang", "anchor-spl", "fixed", "pyth-sdk-solana", "solana-account-decoder", "async-once-cell"]
cli = ["clap", "solana-cli-output", "ratatui", "tui-input", "serde", "crossterm", "unicode-width", "strum", "tracing-subscriber"]

[dev-dependencies]
bump2version = "0.1.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"

[badges]
maintenance = { status = "actively-developed" }
